content/_generated-doc/3.34/config/quarkus-oidc-client_quarkus.oidc-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-client_quarkus-oidc-client-enabled]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-enabled[`+++quarkus.oidc-client.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If the OIDC client extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-client_quarkus-oidc-client-health-enabled]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-health-enabled[`+++quarkus.oidc-client.health.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.health.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether the OIDC Client extension should automatically register a health check for OIDC clients when a Health Check capability is present.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-auth-server-url]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-auth-server-url[`+++quarkus.oidc-client.auth-server-url+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.auth-server-url+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".auth-server-url+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".auth-server-url+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The base URL of an OpenID Connect (OIDC) server, for example, `https://host:port/auth`. Do not set this property if you use the public key verification (`public-key`) or certificate chain verification only (`certificate-chain`).

By default, when an OIDC configuration metadata discovery is enabled with the `discovery-enabled()` property, it is retrieved from a well known provider endpoint with its URL calculated by appending a value of the `discovery-path()` path such as `.well-known/openid-configuration` to this URL.

For Keycloak, use `https://host:port/realms/++{++realm++}++`, replacing `++{++realm++}++` with the Keycloak realm name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_AUTH_SERVER_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_AUTH_SERVER_URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-discovery-enabled]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-discovery-enabled[`+++quarkus.oidc-client.discovery-enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.discovery-enabled+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".discovery-enabled+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".discovery-enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enable discovery of the OIDC endpoints. If not enabled, you must configure the OIDC endpoint URLs individually.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-discovery-path]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-discovery-path[`+++quarkus.oidc-client.discovery-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.discovery-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".discovery-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".discovery-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The relative path of the OIDC discovery endpoint.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_DISCOVERY_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_DISCOVERY_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++.well-known/openid-configuration+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-registration-path]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-registration-path[`+++quarkus.oidc-client.registration-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.registration-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".registration-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".registration-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The relative path or absolute URL of the OIDC dynamic client registration endpoint. Set if `discovery-enabled` is `false` or a discovered token endpoint path must be customized.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REGISTRATION_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REGISTRATION_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-connection-delay]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-connection-delay[`+++quarkus.oidc-client.connection-delay+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.connection-delay+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".connection-delay+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".connection-delay+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The duration to attempt the initial connection to an OIDC server. For example, setting the duration to `20S` allows 10 retries, each 2 seconds apart. This property is only effective when the initial OIDC connection is created. For dropped connections, use the `connection-retry-count` property instead.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_DELAY+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-oidc-client_quarkus-oidc-client-connection-retry-count]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-connection-retry-count[`+++quarkus.oidc-client.connection-retry-count+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.connection-retry-count+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".connection-retry-count+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".connection-retry-count+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The number of times to retry re-establishing an existing OIDC connection if it is temporarily lost. Different from `connection-delay`, which applies only to initial connection attempts. For instance, if a request to the OIDC token endpoint fails due to a connection issue, it will be retried as per this setting.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_RETRY_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_RETRY_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++3+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-connection-timeout]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-connection-timeout[`+++quarkus.oidc-client.connection-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.connection-timeout+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".connection-timeout+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".connection-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The number of seconds after which the current OIDC connection request times out.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|`+++10S+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-use-blocking-dns-lookup]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-use-blocking-dns-lookup[`+++quarkus.oidc-client.use-blocking-dns-lookup+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.use-blocking-dns-lookup+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".use-blocking-dns-lookup+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".use-blocking-dns-lookup+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether DNS lookup should be performed on the worker thread. Use this option when you can see logged warnings about blocked Vert.x event loop by HTTP requests to OIDC server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_USE_BLOCKING_DNS_LOOKUP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_USE_BLOCKING_DNS_LOOKUP+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-max-pool-size]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-max-pool-size[`+++quarkus.oidc-client.max-pool-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.max-pool-size+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".max-pool-size+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".max-pool-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum size of the connection pool used by the WebClient.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-oidc-client_quarkus-oidc-client-follow-redirects]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-follow-redirects[`+++quarkus.oidc-client.follow-redirects+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.follow-redirects+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".follow-redirects+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".follow-redirects+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Follow redirects automatically when WebClient gets HTTP 302. When this property is disabled only a single redirect to exactly the same original URI is allowed but only if one or more cookies were set during the redirect request.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_FOLLOW_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_FOLLOW_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-token-path]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-token-path[`+++quarkus.oidc-client.token-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.token-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".token-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".token-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The OIDC token endpoint that issues access and refresh tokens; specified as a relative path or absolute URL. Set if `discovery-enabled` is `false` or a discovered token endpoint path must be customized.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TOKEN_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TOKEN_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-revoke-path]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-revoke-path[`+++quarkus.oidc-client.revoke-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.revoke-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".revoke-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".revoke-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The relative path or absolute URL of the OIDC token revocation endpoint.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REVOKE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REVOKE_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-client-id]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-client-id[`+++quarkus.oidc-client.client-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.client-id+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".client-id+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".client-id+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The client id of the application. Each application has a client id that is used to identify the application. Setting the client id is not required if `application-type` is `service` and no token introspection is required.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-client-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-client-name[`+++quarkus.oidc-client.client-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.client-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".client-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".client-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The client name of the application. It is meant to represent a human readable description of the application which you may provide when an application (client) is registered in an OpenId Connect provider's dashboard. For example, you can set this property to have more informative log messages which record an activity of the given client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CLIENT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CLIENT_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-id]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-id[`+++quarkus.oidc-client.id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.id+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".id+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".id+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
A unique OIDC client identifier. It must be set when OIDC clients are created dynamically and is optional in all other cases.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-client-enabled]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-client-enabled[`+++quarkus.oidc-client.client-enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.client-enabled+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".client-enabled+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".client-enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If this client configuration is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-scopes]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-scopes[`+++quarkus.oidc-client.scopes+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.scopes+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".scopes+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".scopes+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
List of access token scopes


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_SCOPES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-audience]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-audience[`+++quarkus.oidc-client.audience+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.audience+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".audience+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".audience+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
List of access token audiences


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-refresh-token-time-skew]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-refresh-token-time-skew[`+++quarkus.oidc-client.refresh-token-time-skew+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.refresh-token-time-skew+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".refresh-token-time-skew+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".refresh-token-time-skew+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Refresh token time skew. If this property is enabled then the configured duration is converted to seconds and is added to the current time when checking whether the access token should be refreshed. If the sum is greater than this access token's expiration time then a refresh is going to happen.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REFRESH_TOKEN_TIME_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REFRESH_TOKEN_TIME_SKEW+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-oidc-client_quarkus-oidc-client-access-token-expires-in]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-access-token-expires-in[`+++quarkus.oidc-client.access-token-expires-in+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.access-token-expires-in+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".access-token-expires-in+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".access-token-expires-in+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Access token expiration period relative to the current time. This property is only checked when an access token grant response does not include an access token expiration property.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ACCESS_TOKEN_EXPIRES_IN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ACCESS_TOKEN_EXPIRES_IN+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-oidc-client_quarkus-oidc-client-access-token-expiry-skew]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-access-token-expiry-skew[`+++quarkus.oidc-client.access-token-expiry-skew+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.access-token-expiry-skew+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".access-token-expiry-skew+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".access-token-expiry-skew+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Access token expiry time skew that can be added to the calculated token expiry time.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ACCESS_TOKEN_EXPIRY_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ACCESS_TOKEN_EXPIRY_SKEW+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-oidc-client_quarkus-oidc-client-absolute-expires-in]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-absolute-expires-in[`+++quarkus.oidc-client.absolute-expires-in+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.absolute-expires-in+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".absolute-expires-in+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".absolute-expires-in+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If the access token 'expires_in' property should be checked as an absolute time value as opposed to a duration relative to the current time.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ABSOLUTE_EXPIRES_IN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ABSOLUTE_EXPIRES_IN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-type]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-type[`+++quarkus.oidc-client.grant.type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant.type+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant.type+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant.type+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Grant type


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:client['client_credentials' grant requiring an OIDC client authentication only], tooltip:password['password' grant requiring both OIDC client and user ('username' and 'password') authentications], tooltip:code['authorization_code' grant requiring an OIDC client authentication as well as at least 'code' and 'redirect_uri' parameters which must be passed to OidcClient at the token request time.], tooltip:exchange['urn\:ietf\:params\:oauth\:grant-type\:token-exchange' grant requiring an OIDC client authentication as well as at least 'subject_token' parameter which must be passed to OidcClient at the token request time.], tooltip:jwt['urn\:ietf\:params\:oauth\:grant-type\:jwt-bearer' grant requiring an OIDC client authentication as well as at least an 'assertion' parameter which must be passed to OidcClient at the token request time.], tooltip:refresh['refresh_token' grant requiring an OIDC client authentication and a refresh token. Note, OidcClient supports this grant by default if an access token acquisition response contained a refresh token. However, in some cases, the refresh token is provided out of band, for example, it can be shared between several of the confidential client's services, etc. If 'quarkus.oidc-client.grant-type' is set to 'refresh' then `OidcClient` will only support refreshing the tokens.], tooltip:ciba['urn\:openid\:params\:grant-type\:ciba' grant requiring an OIDC client authentication as well as 'auth_req_id' parameter which must be passed to OidcClient at the token request time.], tooltip:device['urn\:ietf\:params\:oauth\:grant-type\:device_code' grant requiring an OIDC client authentication as well as 'device_code' parameter which must be passed to OidcClient at the token request time.]
|tooltip:client['client_credentials' grant requiring an OIDC client authentication only]

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-access-token-property]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-access-token-property[`+++quarkus.oidc-client.grant.access-token-property+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant.access-token-property+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant.access-token-property+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant.access-token-property+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Access token property name in a token grant response


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_ACCESS_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_ACCESS_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++access_token+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-refresh-token-property]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-refresh-token-property[`+++quarkus.oidc-client.grant.refresh-token-property+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant.refresh-token-property+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant.refresh-token-property+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant.refresh-token-property+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Refresh token property name in a token grant response


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++refresh_token+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-expires-in-property]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-expires-in-property[`+++quarkus.oidc-client.grant.expires-in-property+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant.expires-in-property+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant.expires-in-property+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant.expires-in-property+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Access token expiry property name in a token grant response


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++expires_in+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-refresh-expires-in-property]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-refresh-expires-in-property[`+++quarkus.oidc-client.grant.refresh-expires-in-property+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant.refresh-expires-in-property+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant.refresh-expires-in-property+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant.refresh-expires-in-property+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Refresh token expiry property name in a token grant response


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++refresh_expires_in+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-grant-options-grant-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-grant-options-grant-name[`+++quarkus.oidc-client.grant-options."grant-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.grant-options."grant-name"+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".grant-options."grant-name"+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".grant-options."grant-name"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Grant options


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_OPTIONS__GRANT_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_OPTIONS__GRANT_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,Map<String,String>>
|

a| [[quarkus-oidc-client_quarkus-oidc-client-early-tokens-acquisition]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-early-tokens-acquisition[`+++quarkus.oidc-client.early-tokens-acquisition+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.early-tokens-acquisition+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".early-tokens-acquisition+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".early-tokens-acquisition+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Requires that all filters which use 'OidcClient' acquire the tokens at the post-construct initialization time, possibly long before these tokens are used. This property should be disabled if the access token may expire before it is used for the first time and no refresh token is available.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_EARLY_TOKENS_ACQUISITION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_EARLY_TOKENS_ACQUISITION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-headers-headers]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-headers-headers[`+++quarkus.oidc-client.headers."headers"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.headers."headers"+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".headers."headers"+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".headers."headers"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Custom HTTP headers which have to be sent to the token endpoint


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_HEADERS__HEADERS_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_HEADERS__HEADERS_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-oidc-client_quarkus-oidc-client-refresh-interval]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-refresh-interval[`+++quarkus.oidc-client.refresh-interval+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.refresh-interval+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".refresh-interval+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".refresh-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Token refresh interval. By default, OIDC client refreshes the token during the current request, when it detects that it has expired, or nearly expired if the `refresh-token-time-skew()` is configured. But, when this property is configured, OIDC client can refresh the token asynchronously in the configured interval. This property is only effective with OIDC client filters and other `AbstractTokensProducer` extensions, but not when you use the `OidcClient++#++getTokens()` API directly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client[icon:question-circle[title=More information about the Duration format]]
|

h|[[quarkus-oidc-client_section_quarkus-oidc-client-proxy]] [.section-name.section-level0]##link:#quarkus-oidc-client_section_quarkus-oidc-client-proxy[HTTP proxy configuration]##
h|Type
h|Default

a| [[quarkus-oidc-client_quarkus-oidc-client-proxy-proxy-configuration-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-proxy-proxy-configuration-name[`+++quarkus.oidc-client.proxy.proxy-configuration-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.proxy.proxy-configuration-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".proxy.proxy-configuration-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".proxy.proxy-configuration-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The name of the proxy configuration to use.

If a name is configured, it uses the configuration from `quarkus.proxy.<name>.++*++`. Please note that the 'non-proxy-hosts' option is currently not supported. If a name is configured, but no proxy configuration is found with that name then an error will be thrown.

The default proxy configuration is *not* used by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_PROXY_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_PROXY_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|


h|[[quarkus-oidc-client_section_quarkus-oidc-client-tls]] [.section-name.section-level0]##link:#quarkus-oidc-client_section_quarkus-oidc-client-tls[TLS configuration]##
h|Type
h|Default

a| [[quarkus-oidc-client_quarkus-oidc-client-tls-tls-configuration-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-tls-tls-configuration-name[`+++quarkus.oidc-client.tls.tls-configuration-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.tls.tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".tls.tls-configuration-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".tls.tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The name of the TLS configuration to use.

If a name is configured, it uses the configuration from `quarkus.tls.<name>.++*++` If a name is configured, but no TLS configuration is found with that name then an error will be thrown.

The default TLS configuration is *not* used by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TLS_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TLS_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|


h|[[quarkus-oidc-client_section_quarkus-oidc-client-credentials]] [.section-name.section-level0]##link:#quarkus-oidc-client_section_quarkus-oidc-client-credentials[Different authentication options for OIDC client to access OIDC token and other secured endpoints]##
h|Type
h|Default

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-secret]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-secret[`+++quarkus.oidc-client.credentials.secret+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.secret+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.secret+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.secret+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The client secret used by the `client_secret_basic` authentication method. Must be set unless a secret is set in `client-secret` or `jwt` client authentication is required. You can use `client-secret.value` instead, but both properties are mutually exclusive.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_SECRET+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-value]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-value[`+++quarkus.oidc-client.credentials.client-secret.value+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.client-secret.value+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.client-secret.value+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.client-secret.value+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The client secret value. This value is ignored if `credentials.secret` is set. Must be set unless a secret is set in `client-secret` or `jwt` client authentication is required.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-name[`+++quarkus.oidc-client.credentials.client-secret.provider.name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.client-secret.provider.name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.client-secret.provider.name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.client-secret.provider.name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider bean name, which should only be set if more than one CredentialsProvider is registered


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-keyring-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-keyring-name[`+++quarkus.oidc-client.credentials.client-secret.provider.keyring-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.client-secret.provider.keyring-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.client-secret.provider.keyring-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.client-secret.provider.keyring-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider keyring name. The keyring name is only required when the CredentialsProvider being used requires the keyring name to look up the secret, which is often the case when a CredentialsProvider is shared by multiple extensions to retrieve credentials from a more dynamic source like a vault instance or secret manager


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEYRING_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEYRING_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-key]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-provider-key[`+++quarkus.oidc-client.credentials.client-secret.provider.key+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.client-secret.provider.key+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.client-secret.provider.key+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.client-secret.provider.key+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider client secret key


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-method]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-client-secret-method[`+++quarkus.oidc-client.credentials.client-secret.method+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.client-secret.method+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.client-secret.method+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.client-secret.method+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The authentication method. If the `clientSecret.value` secret is set, this method is `basic` by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_METHOD+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:basic[`client_secret_basic` (default)\: The client id and secret are submitted with the HTTP Authorization Basic scheme.], tooltip:post[`client_secret_post`\: The client id and secret are submitted as the `client_id` and `client_secret` form parameters.], tooltip:post-jwt[`client_secret_jwt`\: The client id and generated JWT secret are submitted as the `client_id` and `client_secret` form parameters.], tooltip:query[client id and secret are submitted as HTTP query parameters. This option is only supported by the OIDC extension.]
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-source]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-source[`+++quarkus.oidc-client.credentials.jwt.source+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.source+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.source+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.source+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
JWT token source: OIDC provider client or an existing JWT bearer token.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SOURCE+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:client[JWT token is generated by the OIDC provider client to support `client_secret_jwt` and `private_key_jwt` authentication methods.], tooltip:bearer[JWT bearer token is used as a client assertion\: https\://www.rfc-editor.org/rfc/rfc7523++#++section-2.2.]
|tooltip:client[JWT token is generated by the OIDC provider client to support `client_secret_jwt` and `private_key_jwt` authentication methods.]

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-token-path]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-token-path[`+++quarkus.oidc-client.credentials.jwt.token-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.token-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.token-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.token-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Path to a file with a JWT bearer token that should be used as a client assertion. This path can only be set when JWT source (`source()`) is set to `Source++#++BEARER`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_PATH+++`
endif::add-copy-button-to-env-var[]
--
|path
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret[`+++quarkus.oidc-client.credentials.jwt.secret+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.secret+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.secret+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.secret+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If provided, indicates that JWT is signed using a secret key. It is mutually exclusive with `key`, `key-file` and `key-store` properties.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-name[`+++quarkus.oidc-client.credentials.jwt.secret-provider.name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.secret-provider.name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.secret-provider.name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.secret-provider.name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider bean name, which should only be set if more than one CredentialsProvider is registered


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-keyring-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-keyring-name[`+++quarkus.oidc-client.credentials.jwt.secret-provider.keyring-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.secret-provider.keyring-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.secret-provider.keyring-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.secret-provider.keyring-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider keyring name. The keyring name is only required when the CredentialsProvider being used requires the keyring name to look up the secret, which is often the case when a CredentialsProvider is shared by multiple extensions to retrieve credentials from a more dynamic source like a vault instance or secret manager


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEYRING_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEYRING_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-key]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-secret-provider-key[`+++quarkus.oidc-client.credentials.jwt.secret-provider.key+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.secret-provider.key+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.secret-provider.key+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.secret-provider.key+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The CredentialsProvider client secret key


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key[`+++quarkus.oidc-client.credentials.jwt.key+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
String representation of a private key. If provided, indicates that JWT is signed using a private key in PEM or JWK format. It is mutually exclusive with `secret`, `key-file` and `key-store` properties. You can use the `signature-algorithm` property to override the default key algorithm, `RS256`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-file]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-file[`+++quarkus.oidc-client.credentials.jwt.key-file+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key-file+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key-file+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format. It is mutually exclusive with `secret`, `key` and `key-store` properties. You can use the `signature-algorithm` property to override the default key algorithm, `RS256`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-store-file]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-store-file[`+++quarkus.oidc-client.credentials.jwt.key-store-file+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key-store-file+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key-store-file+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key-store-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If provided, indicates that JWT is signed using a private key from a keystore. It is mutually exclusive with `secret`, `key` and `key-file` properties.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-store-password]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-store-password[`+++quarkus.oidc-client.credentials.jwt.key-store-password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key-store-password+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key-store-password+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key-store-password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
A parameter to specify the password of the keystore file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-id]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-id[`+++quarkus.oidc-client.credentials.jwt.key-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key-id+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key-id+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key-id+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The private key id or alias.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-password]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-key-password[`+++quarkus.oidc-client.credentials.jwt.key-password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.key-password+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.key-password+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.key-password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The private key password.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-audience]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-audience[`+++quarkus.oidc-client.credentials.jwt.audience+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.audience+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.audience+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.audience+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The JWT audience (`aud`) claim value. By default, the audience is set to the address of the OpenId Connect Provider's token endpoint.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-keep-audience-trailing-slash]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-keep-audience-trailing-slash[`+++quarkus.oidc-client.credentials.jwt.keep-audience-trailing-slash+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.keep-audience-trailing-slash+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.keep-audience-trailing-slash+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.keep-audience-trailing-slash+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether to keep a trailing slash `/` in the `audience()` value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEEP_AUDIENCE_TRAILING_SLASH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEEP_AUDIENCE_TRAILING_SLASH+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-token-key-id]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-token-key-id[`+++quarkus.oidc-client.credentials.jwt.token-key-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.token-key-id+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.token-key-id+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.token-key-id+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The key identifier of the signing key added as a JWT `kid` header.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-issuer]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-issuer[`+++quarkus.oidc-client.credentials.jwt.issuer+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.issuer+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.issuer+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.issuer+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The issuer of the signing key added as a JWT `iss` claim. The default value is the client id.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ISSUER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ISSUER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-subject]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-subject[`+++quarkus.oidc-client.credentials.jwt.subject+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.subject+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.subject+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.subject+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Subject of the signing key added as a JWT `sub` claim The default value is the client id.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SUBJECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SUBJECT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-claims-claim-name]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-claims-claim-name[`+++quarkus.oidc-client.credentials.jwt.claims."claim-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.claims."claim-name"+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.claims."claim-name"+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.claims."claim-name"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Additional claims.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_CLAIMS__CLAIM_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_CLAIMS__CLAIM_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-signature-algorithm]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-signature-algorithm[`+++quarkus.oidc-client.credentials.jwt.signature-algorithm+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.signature-algorithm+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.signature-algorithm+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.signature-algorithm+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The signature algorithm used for the `key-file` property. Supported values: `RS256` (default), `RS384`, `RS512`, `PS256`, `PS384`, `PS512`, `ES256`, `ES384`, `ES512`, `HS256`, `HS384`, `HS512`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-lifespan]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-lifespan[`+++quarkus.oidc-client.credentials.jwt.lifespan+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.lifespan+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.lifespan+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.lifespan+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The JWT lifespan in seconds. This value is added to the time at which the JWT was issued to calculate the expiration time.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++10+++`

a| [[quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-assertion]] [.property-path]##link:#quarkus-oidc-client_quarkus-oidc-client-credentials-jwt-assertion[`+++quarkus.oidc-client.credentials.jwt.assertion+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client.credentials.jwt.assertion+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.oidc-client."id".credentials.jwt.assertion+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.oidc-client."id".credentials.jwt.assertion+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If true then the client authentication token is a JWT bearer grant assertion. Instead of producing 'client_assertion' and 'client_assertion_type' form properties, only 'assertion' is produced. This option is only supported by the OIDC client extension.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ASSERTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ASSERTION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-oidc-client_quarkus-oidc-client]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
